force-app/main/default/objects/Corporate_Request__c/Corporate_Request__c.object-meta.xml
<CustomObject>
    <label>Corporate Request</label>
    <nameField>
        <label>Corporate Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>