force-app/main/default/objects/Corporate_Request__c/fields/Allegation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allegation_Type__c</fullName>
    <label>Allegation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Gender</fullName>
            </value>
            <value>
                <fullName>Harassment</fullName>
            </value>
            <value>
                <fullName>Other Discrimination</fullName>
            </value>
            <value>
                <fullName>Race</fullName>
            </value>
            <value>
                <fullName>Religion</fullName>
            </value>
            <value>
                <fullName>Retaliation</fullName>
            </value>
            <value>
                <fullName>Wage/Hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>