force-app/main/default/objects/Corporate_Request__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>#35854 - Corporate Requests: Update Email Template notifications for Owner &amp; Creator</description>
    <formula>LEFT($Api.Partner_Server_URL_660, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_660))</formula>
    <label>Base URL</label>
    <type>Text</type>
</CustomField>