force-app/main/default/objects/Corporate_Request__c/fields/Business_Sponsor_Approving_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Sponsor_Approving_Manager__c</fullName>
    <label>Approving Manager</label>
    <length>80</length>
    <type>Text</type>
</CustomField>