force-app/main/default/objects/Corporate_Request__c/fields/Charging_Department__c.field-meta.xml
<CustomField>
    <fullName>Charging_Department__c</fullName>
    <label>Charging Department</label>
    <type>TextArea</type>
</CustomField>