force-app/main/default/objects/Corporate_Request__c/fields/Closed_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Details__c</fullName>
    <label>Closed Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Settled (with a separate field for settlement amount)</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Dismissed/Summary Judgment</fullName>
            </value>
            <value>
                <fullName>Determination in favor of plaintiff</fullName>
            </value>
            <value>
                <fullName>Determination in favor of IRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>