force-app/main/default/objects/Corporate_Request__c/fields/Compass_Case_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Compass_Case_ID_2__c</fullName>
    <label>Compass Case ID 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>