force-app/main/default/objects/Corporate_Request__c/fields/COMPASS_ID__c.field-meta.xml
<CustomField>
    <fullName>COMPASS_ID__c</fullName>
    <label>Compass Case ID 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>