force-app/main/default/objects/Corporate_Request__c/fields/Country_Affected__c.field-meta.xml
<CustomField>
    <fullName>Country_Affected__c</fullName>
    <label>Country Affected</label>
    <length>50</length>
    <type>Text</type>
</CustomField>