force-app/main/default/objects/Corporate_Request__c/fields/Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Cubic_Feet__c</fullName>
    <label>Cubic Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>