force-app/main/default/objects/Corporate_Request__c/fields/Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Amount__c</fullName>
    <label>Amount Disputed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>