force-app/main/default/objects/Corporate_Request__c/fields/Employee_Name_or_Market__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_or_Market__c</fullName>
    <label>Employee Market</label>
    <length>80</length>
    <type>Text</type>
</CustomField>