force-app/main/default/objects/Corporate_Request__c/fields/Entity_and_Country_of_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Entity_and_Country_of_Jurisdiction__c</fullName>
    <label>Entity and Country of Jurisdiction</label>
    <type>TextArea</type>
</CustomField>