force-app/main/default/objects/Corporate_Request__c/fields/Final_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Final_Outcome__c</fullName>
    <label>Final Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Judgment for Plaintiff</fullName>
            </value>
            <value>
                <fullName>Judgment for Defendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>