force-app/main/default/objects/Corporate_Request__c/fields/IM_Business_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>IM_Business_Sponsor_Name__c</fullName>
    <label>IM Business Sponsor Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>