force-app/main/default/objects/Corporate_Request__c/fields/Initial_Demand__c.field-meta.xml
<CustomField>
    <fullName>Initial_Demand__c</fullName>
    <label>Initial Settlement Offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>