force-app/main/default/objects/Corporate_Request__c/fields/Justification_for_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Urgency__c</fullName>
    <label>Justification for Urgency</label>
    <type>TextArea</type>
</CustomField>