force-app/main/default/objects/Corporate_Request__c/fields/Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change__c</fullName>
    <description>The exact date and time the &apos;Status&apos; field was last updated to a new value.</description>
    <label>Last Status Change</label>
    <type>DateTime</type>
</CustomField>