force-app/main/default/objects/Corporate_Request__c/fields/Mailing_Required__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Required__c</fullName>
    <label>Mailing Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>