force-app/main/default/objects/Corporate_Request__c/fields/Multiple_Properties__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Properties__c</fullName>
    <label>Multiple Properties?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>