force-app/main/default/objects/Corporate_Request__c/fields/Opportunity_detail_link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_detail_link__c</fullName>
    <description>Created for this US #8263/7988.
Its hidden field used to populate the opportunity link in template.</description>
    <formula>HYPERLINK(&quot;https://login.salesforce.com/&quot; + Related_Opportunity__r.Id,  Related_Opportunity__r.Name )</formula>
    <label>Opportunity detail link</label>
    <type>Text</type>
</CustomField>