force-app/main/default/objects/Corporate_Request__c/fields/Prior_Pre_Litigation_Demand__c.field-meta.xml
<CustomField>
    <fullName>Prior_Pre_Litigation_Demand__c</fullName>
    <label>Prior Pre-Litigation Demand?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>