force-app/main/default/objects/Corporate_Request__c/fields/Regions_Affected__c.field-meta.xml
<CustomField>
    <fullName>Regions_Affected__c</fullName>
    <label>Regions Affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>CEE (Central and Eastern Europe)</fullName>
                <isActive>false</isActive>
                <label>CEE (Central and Eastern Europe)</label>
            </value>
            <value>
                <fullName>Central and Southern Europe (CSE)</fullName>
                <isActive>false</isActive>
                <label>Central and Southern Europe (CSE)</label>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
                <isActive>false</isActive>
                <label>Global</label>
            </value>
            <value>
                <fullName>IMLA</fullName>
            </value>
            <value>
                <fullName>IMNA</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>MENAT</fullName>
            </value>
            <value>
                <fullName>Middle East/ Africa</fullName>
                <isActive>false</isActive>
                <label>Middle East/ Africa</label>
            </value>
            <value>
                <fullName>NEE</fullName>
                <isActive>false</isActive>
                <label>NEE</label>
            </value>
            <value>
                <fullName>Northern Europe (NE)</fullName>
                <isActive>false</isActive>
                <label>Northern Europe (NE)</label>
            </value>
            <value>
                <fullName>Northern Europe (UK&amp;I, Nordics, Baltics, DACH + Poland)</fullName>
                <isActive>false</isActive>
                <label>Northern Europe (UK&amp;I, Nordics, Baltics, DACH + Poland)</label>
            </value>
            <value>
                <fullName>RuCIS</fullName>
                <isActive>false</isActive>
                <label>RuCIS</label>
            </value>
            <value>
                <fullName>Russia&amp;CIS</fullName>
            </value>
            <value>
                <fullName>UKISA</fullName>
                <isActive>false</isActive>
                <label>UKISA</label>
            </value>
            <value>
                <fullName>WE</fullName>
                <isActive>false</isActive>
                <label>WE</label>
            </value>
            <value>
                <fullName>Western Europe (WE)</fullName>
                <isActive>false</isActive>
                <label>Western Europe (WE)</label>
            </value>
            <value>
                <fullName>Western Europe &amp; SA</fullName>
                <isActive>false</isActive>
                <label>Western Europe &amp; SA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>