force-app/main/default/objects/Corporate_Request__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Requests</relationshipLabel>
    <relationshipName>Corporate_Requests_Acct</relationshipName>
    <type>Lookup</type>
</CustomField>