force-app/main/default/objects/Corporate_Request__c/fields/Related_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Customer Account</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>Corporate Requests</relationshipLabel>
    <relationshipName>Corporate_Requests_CustAcct</relationshipName>
    <type>Lookup</type>
</CustomField>