force-app/main/default/objects/Corporate_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Regions_Affected__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access Agreements</fullName>
            </value>
            <value>
                <fullName>Accutrac Agreement</fullName>
                <isActive>false</isActive>
                <label>Accutrac Agreement</label>
            </value>
            <value>
                <fullName>Acquisitions &amp; Dispositions</fullName>
            </value>
            <value>
                <fullName>Addendum / Amendment (Non-Revenue)</fullName>
                <isActive>false</isActive>
                <label>Addendum / Amendment (Non-Revenue)</label>
            </value>
            <value>
                <fullName>Addendum / Amendment (Revenue)</fullName>
                <isActive>false</isActive>
                <label>Addendum / Amendment (Revenue)</label>
            </value>
            <value>
                <fullName>Affirmative Action</fullName>
                <isActive>false</isActive>
                <label>Affirmative Action</label>
            </value>
            <value>
                <fullName>Agency Charge</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Amendment (Non-Revenue)</fullName>
                <isActive>false</isActive>
                <label>Amendment (Non-Revenue)</label>
            </value>
            <value>
                <fullName>Amendment (Procurement/Vendor)</fullName>
                <isActive>false</isActive>
                <label>Amendment (Procurement/Vendor)</label>
            </value>
            <value>
                <fullName>Amendment (Revenue)</fullName>
                <isActive>false</isActive>
                <label>Amendment (Revenue)</label>
            </value>
            <value>
                <fullName>APA Preparation / Deal Support</fullName>
            </value>
            <value>
                <fullName>Art Storage</fullName>
                <isActive>false</isActive>
                <label>Art Storage</label>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Audit Request</fullName>
                <isActive>false</isActive>
                <label>Audit Request</label>
            </value>
            <value>
                <fullName>Billing Dispute</fullName>
            </value>
            <value>
                <fullName>Business Associate Agreement</fullName>
                <isActive>false</isActive>
                <label>Business Associate Agreement</label>
            </value>
            <value>
                <fullName>CCS (GPS)</fullName>
                <isActive>false</isActive>
                <label>CCS (GPS)</label>
            </value>
            <value>
                <fullName>Compliance (ITAR, SCA, DOL, etc.)</fullName>
                <isActive>false</isActive>
                <label>Compliance (ITAR, SCA, DOL, etc.)</label>
            </value>
            <value>
                <fullName>Confidentiality Agreement</fullName>
                <isActive>false</isActive>
                <label>Confidentiality Agreement</label>
            </value>
            <value>
                <fullName>Consents</fullName>
            </value>
            <value>
                <fullName>Consent to Assignment</fullName>
                <isActive>false</isActive>
                <label>Consent to Assignment</label>
            </value>
            <value>
                <fullName>Consulting Agreement</fullName>
                <isActive>false</isActive>
                <label>Consulting Agreement</label>
            </value>
            <value>
                <fullName>Corporate Governance</fullName>
            </value>
            <value>
                <fullName>Country Participation Agreement</fullName>
                <isActive>false</isActive>
                <label>Country Participation Agreement</label>
            </value>
            <value>
                <fullName>Country Participation Agreement / LIA</fullName>
                <isActive>false</isActive>
                <label>Country Participation Agreement / LIA</label>
            </value>
            <value>
                <fullName>Customer&apos;s Paper Contract Review</fullName>
                <isActive>false</isActive>
                <label>Customer&apos;s Paper Contract Review</label>
            </value>
            <value>
                <fullName>Customer Agreement</fullName>
            </value>
            <value>
                <fullName>Customer Complaint (Internal)</fullName>
            </value>
            <value>
                <fullName>Customer Contract Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>