force-app/main/default/objects/Corporate_Request__c/fields/Requestor_s_IM_Division__c.field-meta.xml
<CustomField>
    <fullName>Requestor_s_IM_Division__c</fullName>
    <defaultValue>$User.Division</defaultValue>
    <label>Requestor&apos;s IM Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>