force-app/main/default/objects/Corporate_Request__c/fields/Requestor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_s_Name__c</fullName>
    <defaultValue>$User.FirstName + &apos; &apos; + $User.LastName</defaultValue>
    <label>Requestor&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>