force-app/main/default/objects/Corporate_Request__c/fields/Revenue_for_this_Deal__c.field-meta.xml
<CustomField>
    <fullName>Revenue_for_this_Deal__c</fullName>
    <label>Revenue for this Deal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>