force-app/main/default/objects/Corporate_Request__c/fields/Second_Party__c.field-meta.xml
<CustomField>
    <fullName>Second_Party__c</fullName>
    <label>Second Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>