force-app/main/default/objects/Corporate_Request__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <formula>IF(Assignment_to_Contacted__c &gt;=24,IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;SLA Breach&quot;),IF(AND(Assignment_to_Contacted__c &lt;24,Assignment_to_Contacted__c &gt;=18),IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;SLA Warning&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Text</type>
</CustomField>