force-app/main/default/objects/Corporate_Request__c/fields/Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Type_Details__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Accutrac Agreement</fullName>
            </value>
            <value>
                <fullName>Amendment / Addendum</fullName>
            </value>
            <value>
                <fullName>Amendment Framework Agreement for Managed Services (AFAMS)</fullName>
            </value>
            <value>
                <fullName>Articles / Certificate of Incorporation</fullName>
            </value>
            <value>
                <fullName>Art Storage Agreement</fullName>
            </value>
            <value>
                <fullName>Assignment/Novation/Transfer</fullName>
            </value>
            <value>
                <fullName>Assistance with Obtaining Authorized Signatures</fullName>
            </value>
            <value>
                <fullName>Audit Request</fullName>
            </value>
            <value>
                <fullName>Bailee Agreement (3-Party Custodian Agreement)</fullName>
            </value>
            <value>
                <fullName>Billing Dispute</fullName>
            </value>
            <value>
                <fullName>Board and Committee Meeting Schedule</fullName>
            </value>
            <value>
                <fullName>Board Meeting Minutes/WrittenConsent</fullName>
            </value>
            <value>
                <fullName>Board Resolutions</fullName>
            </value>
            <value>
                <fullName>Business Associate Agreement (BAA)</fullName>
            </value>
            <value>
                <fullName>Business Associate Agreement (BAA) - Customer</fullName>
            </value>
            <value>
                <fullName>Business Associate Agreement (BAA) – IM</fullName>
            </value>
            <value>
                <fullName>CDP/CDP Supply Chain</fullName>
            </value>
            <value>
                <fullName>Certificate of Authority</fullName>
            </value>
            <value>
                <fullName>Change of Director / Officer</fullName>
            </value>
            <value>
                <fullName>Cloud / Digital Storage Agreement</fullName>
            </value>
            <value>
                <fullName>Committee Charters</fullName>
            </value>
            <value>
                <fullName>Construction Agreement</fullName>
            </value>
            <value>
                <fullName>Construction Support</fullName>
            </value>
            <value>
                <fullName>Consultancy Agreement</fullName>
            </value>
            <value>
                <fullName>Country Participation Agreement</fullName>
            </value>
            <value>
                <fullName>Consulting Agreement</fullName>
                <label>Consulting Services Agreement</label>
            </value>
            <value>
                <fullName>Contract (Other)</fullName>
            </value>
            <value>
                <fullName>Corporate Seal/Apostille</fullName>
            </value>
            <value>
                <fullName>Crown Commercial Service (CCS) Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>