force-app/main/default/objects/Corporate_Request__c/fields/UPS_Account_Information__c.field-meta.xml
<CustomField>
    <fullName>UPS_Account_Information__c</fullName>
    <label>UPS Account Information</label>
    <type>TextArea</type>
</CustomField>