force-app/main/default/objects/Corporate_Request__c/fields/UPS_Label_Given_PDF__c.field-meta.xml
<CustomField>
    <fullName>UPS_Label_Given_PDF__c</fullName>
    <label>UPS Label Given (PDF)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>