force-app/main/default/objects/Corporate_Request__c/fields/Vendor_Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Annual_Spend__c</fullName>
    <label>Vendor Annual Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>