force-app/main/default/objects/Corporate_Request__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Customer, Vendor, Party or Target Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>