force-app/main/default/objects/Corporate_Request__c/fields/Vendor_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Services_Provided__c</fullName>
    <label>Vendor Services Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Background / Reference Checks</fullName>
            </value>
            <value>
                <fullName>Business Development, Reseller, Channel partner</fullName>
            </value>
            <value>
                <fullName>Cloud Services</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Destruction Services</fullName>
            </value>
            <value>
                <fullName>Disaster Services</fullName>
            </value>
            <value>
                <fullName>Education / Training</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Health Services</fullName>
            </value>
            <value>
                <fullName>HR Services</fullName>
            </value>
            <value>
                <fullName>Lead Generation / Marketing Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Recruiting Services</fullName>
            </value>
            <value>
                <fullName>Scanning Services</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Storage Services</fullName>
            </value>
            <value>
                <fullName>Translation Services</fullName>
            </value>
            <value>
                <fullName>Transportation Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>