force-app/main/default/objects/Corporate_Request__c/fields/Will_Vendor_access_IM_facility_or_system__c.field-meta.xml
<CustomField>
    <fullName>Will_Vendor_access_IM_facility_or_system__c</fullName>
    <label>Will Vendor access IM facility or system</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>