force-app/main/default/objects/Corporate_Request__c/fields/Will_vendor_handle_access_customer_info__c.field-meta.xml
<CustomField>
    <fullName>Will_vendor_handle_access_customer_info__c</fullName>
    <label>Will vendor handle/access customer info?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>