force-app/main/default/objects/Corporate_Request__c/recordTypes/Legal_Corp_Records_Subsidiary_Matters.recordType-meta.xml
<RecordType>
    <fullName>Legal_Corp_Records_Subsidiary_Matters</fullName>
    <active>true</active>
    <label>Legal: Corp. Records &amp; Subsidiary Matters</label>
</RecordType>